--- a/Brainf_ck-sharp/Brainf_ck-sharp.csproj
+++ b/Brainf_ck-sharp/Brainf_ck-sharp.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <RootNamespace>Brainf_ck_sharp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
