More tests added, minor code fixes

--- a/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
+++ b/Brainf_ck-sharp.Test/Brainf_ck-sharp.Test.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicScripts.cs" />
+    <Compile Include="ExceptionTests.cs" />
     <Compile Include="LoopTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptTests.cs" />
