Custom CommandBar and basic console buttons added

--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -116,7 +116,10 @@
     <Compile Include="Helpers\WindowsAPIs\TitleBarHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\UniversalAPIsHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\StatusBarHelper.cs" />
+    <Compile Include="Messages\Actions\ClearConsoleLineMessage.cs" />
     <Compile Include="Messages\Actions\PlayScriptMessage.cs" />
+    <Compile Include="Messages\Actions\RestartConsoleMessage.cs" />
+    <Compile Include="Messages\Actions\UndoConsoleCharacterMessage.cs" />
     <Compile Include="Messages\IDEStatusUpdateMessage.cs" />
     <Compile Include="Messages\OperatorAddedMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -124,6 +127,8 @@
     <Compile Include="UserControls\BottomEdgeInfoBar.xaml.cs">
       <DependentUpon>BottomEdgeInfoBar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\CustomCommandBar\CommandBarWithButtonsAnimations.cs" />
+    <Compile Include="UserControls\CustomCommandBar\CustomCommandBarButton.cs" />
     <Compile Include="UserControls\Header\HeaderButtonControl.xaml.cs">
       <DependentUpon>HeaderButtonControl.xaml</DependentUpon>
     </Compile>
