--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Converters\CharacterWithFallbackConverter.cs" />
     <Compile Include="Converters\ExceptionTypeConverter.cs" />
     <Compile Include="Converters\PositiveValueToBrushConverter.cs" />
+    <Compile Include="Converters\ReadableCharactersConverter.cs" />
     <Compile Include="DataModels\CharactersChunkModel.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleCommandModelBase.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleCommandResult.cs" />
@@ -149,6 +150,9 @@
     <Compile Include="UserControls\DataTemplates\CompactCharactersChunkViewerTemplate.xaml.cs">
       <DependentUpon>CompactCharactersChunkViewerTemplate.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\DataTemplates\UnicodeCharacterTemplate.xaml.cs">
+      <DependentUpon>UnicodeCharacterTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Flyouts\FlyoutContainer.xaml.cs">
       <DependentUpon>FlyoutContainer.xaml</DependentUpon>
     </Compile>
@@ -157,6 +161,9 @@
     </Compile>
     <Compile Include="UserControls\Flyouts\MemoryViewerFlyout.xaml.cs">
       <DependentUpon>MemoryViewerFlyout.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Flyouts\UnicodeCharactersGuideFlyout.xaml.cs">
+      <DependentUpon>UnicodeCharactersGuideFlyout.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Header\HeaderButtonControl.xaml.cs">
       <DependentUpon>HeaderButtonControl.xaml</DependentUpon>
@@ -187,6 +194,7 @@
     <Compile Include="ViewModels\ConsoleViewModel.cs" />
     <Compile Include="ViewModels\ItemsCollectionViewModelBase.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="ViewModels\UnicodeCharactersGuideFlyoutViewModel.cs" />
     <Compile Include="Views\ConsoleView.xaml.cs">
       <DependentUpon>ConsoleView.xaml</DependentUpon>
     </Compile>
@@ -240,6 +248,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\DataTemplates\UnicodeCharacterTemplate.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="UserControls\Flyouts\FlyoutContainer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -249,6 +261,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Flyouts\MemoryViewerFlyout.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Flyouts\UnicodeCharactersGuideFlyout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
