--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -108,14 +108,22 @@
     <Compile Include="Converters\BoolToAccentBrushOrFallbackConverter.cs" />
     <Compile Include="Converters\CharacterWithFallbackConverter.cs" />
     <Compile Include="Converters\ExceptionTypeConverter.cs" />
+    <Compile Include="Converters\IDESectionToDisplayNameConverter.cs" />
     <Compile Include="Converters\PositiveValueToBrushConverter.cs" />
     <Compile Include="Converters\ReadableCharactersConverter.cs" />
-    <Compile Include="DataModels\CharactersChunkModel.cs" />
+    <Compile Include="DataModels\IDEResults\IDEResultExceptionInfoData.cs" />
+    <Compile Include="DataModels\Misc\CharactersChunkModel.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleCommandModelBase.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleCommandResult.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleExceptionResult.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleRestartCommand.cs" />
     <Compile Include="DataModels\ConsoleModels\ConsoleUserCommand.cs" />
+    <Compile Include="DataModels\IDEResults\IDEResultSection.cs" />
+    <Compile Include="DataModels\IDEResults\IDEResultSectionDataBase.cs" />
+    <Compile Include="DataModels\IDEResults\IDEResultSectionSessionData.cs" />
+    <Compile Include="DataModels\IDEResults\IDEResultSectionStateData.cs" />
+    <Compile Include="DataModels\JumpListGroup.cs" />
+    <Compile Include="DataModels\Misc\ScriptExceptionInfo.cs" />
     <Compile Include="Helpers\Brainf_ckFormatterHelper.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\FlyoutManager.cs" />
@@ -143,6 +151,7 @@
     <Compile Include="Messages\OperatorAddedMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateSelectors\ConsoleLineTemplateSelector.cs" />
+    <Compile Include="TemplateSelectors\IDERunResultTemplateSelector.cs" />
     <Compile Include="UserControls\BottomEdgeInfoBar.xaml.cs">
       <DependentUpon>BottomEdgeInfoBar.xaml</DependentUpon>
     </Compile>
@@ -150,6 +159,9 @@
     <Compile Include="UserControls\CustomCommandBar\CustomCommandBarButton.cs" />
     <Compile Include="UserControls\DataTemplates\CompactCharactersChunkViewerTemplate.xaml.cs">
       <DependentUpon>CompactCharactersChunkViewerTemplate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\DataTemplates\ErrorCharacterTemplate.xaml.cs">
+      <DependentUpon>ErrorCharacterTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\DataTemplates\UnicodeCharacterTemplate.xaml.cs">
       <DependentUpon>UnicodeCharacterTemplate.xaml</DependentUpon>
@@ -159,6 +171,9 @@
     </Compile>
     <Compile Include="UserControls\DataTemplates\MemoryCellTemplate.xaml.cs">
       <DependentUpon>MemoryCellTemplate.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Flyouts\IDERunResultFlyout.xaml.cs">
+      <DependentUpon>IDERunResultFlyout.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Flyouts\MemoryViewerFlyout.xaml.cs">
       <DependentUpon>MemoryViewerFlyout.xaml</DependentUpon>
@@ -192,10 +207,12 @@
     <Compile Include="UserControls\VirtualKeyboard\Controls\KeyboardButton.xaml.cs">
       <DependentUpon>KeyboardButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\Abstract\JumpListViewModelBase.cs" />
     <Compile Include="ViewModels\CompactCharactersViewerControlViewModel.cs" />
     <Compile Include="ViewModels\ConsoleViewModel.cs" />
+    <Compile Include="ViewModels\IDERunResultFlyoutViewModel.cs" />
     <Compile Include="ViewModels\IDEViewModel.cs" />
-    <Compile Include="ViewModels\ItemsCollectionViewModelBase.cs" />
+    <Compile Include="ViewModels\Abstract\ItemsCollectionViewModelBase.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="ViewModels\UnicodeCharactersGuideFlyoutViewModel.cs" />
     <Compile Include="Views\ConsoleView.xaml.cs">
@@ -254,6 +271,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControls\DataTemplates\ErrorCharacterTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\DataTemplates\UnicodeCharacterTemplate.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -263,6 +284,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\DataTemplates\MemoryCellTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Flyouts\IDERunResultFlyout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
