--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -129,6 +129,7 @@
     <Compile Include="DataModels\IDEResults\IDEResultSectionSessionData.cs" />
     <Compile Include="DataModels\IDEResults\IDEResultSectionStateData.cs" />
     <Compile Include="DataModels\JumpListGroup.cs" />
+    <Compile Include="DataModels\Misc\GitDiffLineStatus.cs" />
     <Compile Include="DataModels\Misc\IDEIndentationGuides\IDEIndentationLineInfo.cs" />
     <Compile Include="DataModels\Misc\IDEIndentationGuides\IDEIndentationInfoLineType.cs" />
     <Compile Include="DataModels\Misc\IDEIndentationGuides\IDEIndentationOpenBracketLineInfo.cs" />
@@ -156,6 +157,7 @@
     <Compile Include="Messages\Actions\IDEExecutableStatusChangedMessage.cs" />
     <Compile Include="Messages\Actions\PlayScriptMessage.cs" />
     <Compile Include="Messages\Actions\RestartConsoleMessage.cs" />
+    <Compile Include="Messages\Actions\SaveSourceCodeRequestMessage.cs" />
     <Compile Include="Messages\Actions\UndoConsoleCharacterMessage.cs" />
     <Compile Include="Messages\Flyouts\FlyoutClosedNotificationMessage.cs" />
     <Compile Include="Messages\Flyouts\FlyoutCloseRequestMessage.cs" />
@@ -167,6 +169,7 @@
     <Compile Include="Messages\SourceCodeLoadingRequestedMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteDatabase\SQLiteManager.cs" />
+    <Compile Include="TemplateSelectors\GitDiffLineStatusTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\ConsoleLineTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\IDEIndentationInfoTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\IDERunResultTemplateSelector.cs" />
@@ -224,6 +227,7 @@
       <DependentUpon>HeaderControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\InheritedControls\FixedRadExpanderControl.cs" />
+    <Compile Include="UserControls\InheritedControls\InAppAcrylicGrid.cs" />
     <Compile Include="UserControls\InheritedControls\RichEditBoxWithVerticalOffsetInfo.cs" />
     <Compile Include="UserControls\Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
